Enable ZGC for Java runtime container